Certs overflow fix.

--- a/css/gazy-medyczne.org/layout/certificates.scss
+++ b/css/gazy-medyczne.org/layout/certificates.scss
@@ -9,6 +9,9 @@
 .certificates-block h2{ display: none; }
 .certificates-block .header-attachment h2{ display: block; }
 
+.path-frontpage .view-certificates .jcarousel-wrapper li{
+  overflow: hidden;
+}
 .certificates-section .certificates-block .jcarousel-wrapper.jcarousel-skin-tango{width:auto;}
 @media screen and (min-width:1480px){
   .path-frontpage .certificates-block .jcarousel-wrapper ul li { width:22.6em!important; }
